# twatch

./: .gitmodules  README.md
app/: CMakeLists.txt  Kconfig.twatch  prj.conf  west.yml
app/boards/xtensa/twatch/: Kconfig.defconfig  twatch-common.dtsi  twatch_v3.dts  twatch_v3_defconfig
app/drivers/sensor/: CMakeLists.txt  Kconfig
app/drivers/sensor/axp202/zephyr/: CMakeLists.txt  Kconfig  axp202.c  axp202.h  axp202_trigger.c
app/drivers/sensor/bma421/: CMakeLists.txt  bma423.c  bma423_trigger.c
app/drivers/sensor/bma423/: CMakeLists.txt
app/drivers/sensor/bma423/zephyr/: CMakeLists.txt  Kconfig  bma423.c  bma423.h  bma423_trigger.c  module.yml
app/drivers/sensor/pcf8653/zephyr/: CMakeLists.txt  Kconfig  pcf8653.c  pcf8653.h  pcf8653_trigger.c
app/dts/bindings/sensor/: bosch,bma423-i2c.yaml  nxp,pcf8653-i2c.yaml  xpowers,axp202-i2c.yaml
app/include/dt-bindings/regulator/: axp202-i2c.h
app/src/: bma4xx.c
app/src/apps/: CMakeLists.txt  app.c  app.h
app/src/apps/app/: clock.c
app/src/backlight/: CMakeLists.txt  backlight.c
app/src/event_service/: CMakeLists.txt  event_service.c  event_service.h  health_service.h  service_accel.c  service_accel.h  tick_timer_service.c  tick_timer_service.h
app/src/storage/: blobdb.c
app/src/vibes/: CMakeLists.txt  vibes.c
app/zephyr/: module.yml
